# example1

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/: config.h  database.h  http_utils.h  llm_client.h  report_service.h
backend/src/: database.cpp  http_utils.cpp  llm_client.cpp  main.cpp  report_service.cpp
example1/src/example1/: Welcome.java
frontend/: index.html  package.json
frontend/src/: App.vue  style.css
